--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 											<ul class="icons">
 												<li><a href="https://www.linkedin.com/in/syeda-wasiq-3a2160b4" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
+											<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 										</li>
 									</ul>
 								</section>
